--- a/adrapi.csproj
+++ b/adrapi.csproj
@@ -11,6 +11,23 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="domain\domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="domain\Class1.cs" />
+    <Compile Remove="domain\User.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="domain\obj\Debug\netstandard2.0\domain.assets.cache" />
+    <None Remove="domain\obj\domain.csproj.nuget.cache" />
+    <None Remove="domain\obj\domain.csproj.nuget.g.props" />
+    <None Remove="domain\obj\domain.csproj.nuget.g.targets" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="domain\obj\project.assets.json" />
+  </ItemGroup>
 </Project>
