--- a/adrapi/NLog.config
+++ b/adrapi/NLog.config
@@ -9,15 +9,15 @@
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
-
+  <variable name="logDirectory" value="/tmp/logs/${shortdate}"/>
   <!-- the targets to write to -->
   <targets>
     <!-- write logs to file  -->
-    <target xsi:type="File" name="allfile" fileName="logs/nlog-all-${shortdate}.log"
+    <target xsi:type="File" name="allfile" fileName="${logDirectory}/nlog-all-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
     <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
-    <target xsi:type="File" name="ownFile-web" fileName="logs/nlog-own-${shortdate}.log"
+    <target xsi:type="File" name="ownFile-web" fileName="${logDirectory}/nlog-own-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
   </targets>
 
