--- a/domain/domain.csproj
+++ b/domain/domain.csproj
@@ -7,5 +7,9 @@
 
   <ItemGroup>
     <Compile Remove="Class1.cs" />
+    <Compile Remove="Security\Token.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Security\" />
   </ItemGroup>
 </Project>
