--- a/adrapi/adrapi.csproj
+++ b/adrapi/adrapi.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="NLog" Version="4.5.11" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.7.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.6" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +24,7 @@
     <Compile Remove="domain\obj\Debug\netstandard2.0\domain.AssemblyInfo.cs" />
     <Compile Remove="domain\LogginEvents.cs" />
     <Compile Remove="domain\obj\Debug\netstandard2.0\domain.AssemblyInfo.cs" />
+    <Compile Remove="Security\ApiClaimsPrincipalFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="domain\obj\Debug\netstandard2.0\domain.assets.cache" />
