--- a/domain/domain.csproj
+++ b/domain/domain.csproj
@@ -11,5 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Security\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 </Project>
