--- a/adrapi/adrapi.csproj
+++ b/adrapi/adrapi.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.6" />
     <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="3.0.0-beta4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-beta" />
   </ItemGroup>
 
   <ItemGroup>
