FIX log location

--- a/adrapi/nlog.prod.config
+++ b/adrapi/nlog.prod.config
@@ -3,13 +3,13 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="info"
-      internalLogFile="logs/internal-nlog.txt">
+      internalLogFile="/var/log/adrapi/internal-nlog.txt">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
-  <variable name="logDirectory" value="/tmp/logs/${shortdate}"/>
+  <variable name="logDirectory" value="/var/log/adrapi/${shortdate}"/>
   <!-- the targets to write to -->
   <targets>
     <!-- write logs to file  -->
