Configuring SSL certificate

--- a/adrapi/appsettings.json
+++ b/adrapi/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "certificate": {
+    "file" : "adrapi-dev.p12",
+    "password": "adrapi-dev"
+  }
 }
