--- a/adrapi/adrapi.csproj
+++ b/adrapi/adrapi.csproj
@@ -70,6 +70,7 @@
     <Content Remove="domain\bin\Debug\netstandard2.0\domain.deps.json" />
     <Content Update="appsettings.Development.json">
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
@@ -87,5 +88,11 @@
     <None Include="..\README.md">
       <Link>README.md</Link>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="adrapi-dev.p12" />
+    <Resource Include="adrapi-dev.p12">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 </Project>
