--- a/adrapi/adrapi.csproj
+++ b/adrapi/adrapi.csproj
@@ -91,8 +91,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="adrapi-dev.p12" />
-    <Resource Include="adrapi-dev.p12">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
+    <Content Include="adrapi-dev.p12">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
