--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ _build.csproj.DotSettings
 /adrapi/appsettings.Development.json
 /adrapi/api/devapi.paw
 /adrapi/appsettings.Development_1.json
+/testconsole/appsettings.Development.json
