--- a/adrapi/appsettings.json
+++ b/adrapi/appsettings.json
@@ -6,7 +6,17 @@
   },
   "AllowedHosts": "*",
   "certificate": {
-    "file" : "adrapi-dev.p12",
+    "file": "adrapi-dev.p12",
     "password": "adrapi-dev"
-  }
+  },
+  "ldap": {
+    "servers": [ "127.0.0.1" ],
+    "ssl": true,
+    "poolSize": 10,
+    "bindDn": "",
+    "bindCredentials": "",
+    "searchFilter": "",
+    "maxResults": "",
+    "adminCn":  "" 
+  } 
 }
