--- a/adrapi/appsettings.json
+++ b/adrapi/appsettings.json
@@ -16,7 +16,7 @@
     "bindDn": "",
     "bindCredentials": "",
     "searchFilter": "",
-    "maxResults": "",
+    "maxResults": 999,
     "adminCn":  "" 
   } 
 }
