--- a/adrapi/adrapi.csproj
+++ b/adrapi/adrapi.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog" Version="4.7.15" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
@@ -62,9 +63,6 @@
     <None Remove="logs\2018-12-17\nlog-all-2018-12-17.log" />
     <None Remove="logs\2018-12-17\nlog-own-2018-12-17.log" />
     <Content Remove="appsettings.Development_1.json" />
-    <None Include="appsettings.Development_1.json">
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Remove="domain\obj\project.assets.json" />
@@ -72,7 +70,7 @@
     <Content Remove="domain\bin\Debug\netstandard2.0\domain.deps.json" />
     <Content Update="appsettings.Development.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
