--- a/adrapi/appsettings.json
+++ b/adrapi/appsettings.json
@@ -15,6 +15,7 @@
     "poolSize": 10,
     "bindDn": "",
     "bindCredentials": "",
+    "searchBase": "",
     "searchFilter": "",
     "maxResults": 999,
     "adminCn":  "" 
