--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -26,11 +26,7 @@
     <None Remove="appsettings.Development.json" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="security.json">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="appsettings.json">
+    <Content Include="appsettings-tests.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
