--- a/adrapi/adrapi.csproj
+++ b/adrapi/adrapi.csproj
@@ -1,7 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <LangVersion>12</LangVersion>
+    <Version>1.3.0</Version>
+<LangVersion>12</LangVersion>
     <TargetFramework>net10.0</TargetFramework>
   </PropertyGroup>
 
