--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <Version>1.3.0</Version>
+<TargetFramework>net10.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
